Updated view certificates

--- a/index.htm
+++ b/index.htm
@@ -66,23 +66,23 @@
 
                         <div class="tab-contents" id="certifications">
                             <ul>
-                                <li><span>Udemy</span><br>Mastering Data Structures & Algorithms using C and C++ 
-                                    <a href="https://www.udemy.com/certificate/UC-281545df-df93-449a-8e23-f46392588579/" target="_blank" class="cert-link">View Certificate</a>
+                                <li><span>Udemy</span><br>Mastering Data Structures & Algorithms using C and C++
+                                    <a href="https://www.udemy.com/certificate/UC-281545df-df93-449a-8e23-f46392588579/" target="_blank" class="cert-link">View</a>
                                 </li>
                                 <li><span>Udemy</span><br>Python Programming Masterclass
-                                    <a href="https://www.udemy.com/certificate/UC-53b8b9f4-3ee8-4c67-9314-1f91e885d324/" target="_blank" class="cert-link">View Certificate</a> 
+                                    <a href="https://www.udemy.com/certificate/UC-53b8b9f4-3ee8-4c67-9314-1f91e885d324/" target="_blank" class="cert-link">View</a> 
                                 </li>
                                 <li><span>LinkedIn</span><br>Programming Foundations: Fundamentals
-                                    <a href="https://www.linkedin.com/learning/certificates/9db0a81bdefc839446fb26ec27b3ac8f8fff51cab04486c5a9cb19ce1ba29576" target="_blank" class="cert-link">View Certificate</a>
+                                    <a href="https://www.linkedin.com/learning/certificates/9db0a81bdefc839446fb26ec27b3ac8f8fff51cab04486c5a9cb19ce1ba29576" target="_blank" class="cert-link">View</a>
                                 </li>
                                 <li><span>LinkedIn</span><br>Introduction to Career Skills in Software Development 
-                                    <a href="https://www.linkedin.com/learning/certificates/3a795cf346ba906ea05eca2460bc86e5e467e3e311a9d9c8eaf78fce1a3afc9b" target="_blank" class="cert-link">View Certificate</a>
+                                    <a href="https://www.linkedin.com/learning/certificates/3a795cf346ba906ea05eca2460bc86e5e467e3e311a9d9c8eaf78fce1a3afc9b" target="_blank" class="cert-link">View</a>
                                 </li>
                                 <li><span>Sololearn</span><br>Introduction to HTML
-                                    <a href="https://api2.sololearn.com/v2/certificates/CC-HKTYP6H0/image/png?t=638677130266604880" target="_blank" class="cert-link">View Certificate</a>
+                                    <a href="https://api2.sololearn.com/v2/certificates/CC-HKTYP6H0/image/png?t=638677130266604880" target="_blank" class="cert-link">View</a>
                                 </li>
                                 <li><span>Sololearn</span><br>Introduction to C 
-                                    <a href="https://api2.sololearn.com/v2/certificates/CC-WPOGDOPB/image/png?t=638688185049765070" target="_blank" class="cert-link">View Certificate</a>
+                                    <a href="https://api2.sololearn.com/v2/certificates/CC-WPOGDOPB/image/png?t=638688185049765070" target="_blank" class="cert-link">View</a>
                                 </li>
                             </ul>
                         </div>
